# Konbini

./: .gitignore  CMakeLists.txt
data/: en.txt  jp.txt  productsEN.txt  productsJP.txt
include/: Accounts.h  Cart.h  Colors.h  Konbini.h  KonbiniUI.h  LanguageManager.h  Products.h  Utils.h
src/: Accounts.cpp  Cart.cpp  Konbini.cpp  KonbiniUI.cpp  LanguageManager.cpp  Products.cpp  main.cpp
tests/: LngManagerTests.cpp  utilsTests.cpp
